--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget4/pump-tables-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget4/pump-tables-widget4.component.html
@@ -105,7 +105,7 @@
                             <div class="row">
                                 <div class="col-md-10"></div>
                                 <div class="col-auto">
-                                    <button type="submit" class="btn btn-outline-warning my-2 my-sm-0"
+                                    <button type="submit" class="btn btn-warning my-2 my-sm-0"
                                         (click)="goToPDF('current')">PDF View</button>
                                 </div>
                             </div>
@@ -136,7 +136,7 @@
                                 </div>
 
                                 <div class="col-auto">
-                                    <button type="submit" class="btn btn-outline-warning my-2 my-sm-0"
+                                    <button type="submit" class="btn btn-warning my-2 my-sm-0"
                                         (click)="goToPDF('range')">PDF View</button>
                                 </div>
                             </div>
@@ -336,11 +336,11 @@
                                         (click)="goToPDFLQ('range')">PDF View</button>
                                 </div> -->
                                 <div *ngIf="!stausToll" class="col-auto">
-                                    <button type="submit" class="btn btn-outline-warning my-2 my-sm-0"
+                                    <button type="submit" class="btn btn-warning my-2 my-sm-0"
                                         (click)="goToPDFLQ('current')">PDF View</button>
                                 </div>
                                 <div *ngIf="stausToll" class="col-auto">
-                                    <button type="submit" class="btn btn-outline-warning my-2 my-sm-0"
+                                    <button type="submit" class="btn btn-warning my-2 my-sm-0"
                                         (click)="goToPDFLQ('range')">PDF View</button>
                                 </div>
                             </div>
