--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget14/tiles-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget14/tiles-widget14.component.html
@@ -1,24 +1,214 @@
-<!--begin::Mixed Widget 14-->
-<div
-  class="card card-custom bgi-no-repeat bgi-size-cover"
-  [ngClass]="cssClass"
-  style="background-image: url('./assets/media/stock/600x600/img-16.jpg')"
->
-  <!--begin::Body-->
-  <div
-    class="card-body d-flex flex-column align-items-start justify-content-start"
-  >
-    <div class="p-1 flex-grow-1">
-      <h3 class="text-white font-weight-bolder line-height-lg mb-5">
-        Create Reports<br />With App
-      </h3>
+<!DOCTYPE html
+PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
+
+<head>
+<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
+
+<title>Editable Statement</title>
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+   <!-- <link rel='stylesheet' type='text/css' href='../../../../../../assets/EditableInvoice/css/style.css' /> -->
+
+<script type='text/javascript' src='../../../../../assets/EditableInvoice/js/jquery-1.3.2.min1.js'></script>
+<script type='text/javascript' src='../../../../../assets/EditableInvoice/js/example1.js'></script>
+
+</head>
+
+<body id="contentToConvert">
+
+<div id="page-wrap">
+
+
+    <div class="row">
+    <div class="col-md-1"></div>
+
+    <div class="col-md-10">
+       
+        &nbsp; <button style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i class="fa fa-print"
+                aria-hidden="true"></i> &nbsp;</button>
     </div>
 
-    <a class="btn btn-link btn-link-warning font-weight-bold cursor-pointer">
-      Create Report
-      <app-keenicon name="arrow-right" class=" ssvg-icon-lg text-warning"></app-keenicon>
-    </a>
-  </div>
-  <!--end::Body-->
+    </div>
+
+    <div id="sanjay">
+        <div class="container">
+
+
+            <div class="col-12 mr-2 px-1 py-1 container border border-success" id="htmlData">
+               
+                <!-- <div class="border border-success alert alert-secondary"> -->
+                    <div>
+                    <div class="row px-4 py-4">
+                            <div class="col-8">
+                                <h3> <b style="font-size: 141%;">FASTag summary</b> <br>
+                                </h3>
+                            </div>
+                            <div class="col-4">
+                                <p style="text-align: right;"><img src="../../../../assets/images/vplogo.png"
+                                    alt="logo" style="height: 52%;width: 75%;"></p>
+                            </div>
+                            <!-- <div class="col-2">
+                                <p style="text-align: right;"><img src="../../../../../../assets/images/vplogo.png"
+                                    alt="logo" width="80" height="40"></p>
+                            </div> -->
+                            <!-- <br> -->
+
+                       
+                    </div>
+                    <div class="row px-4 py-4">
+
+                    <!-- <div class="col-12">
+                        <h4><b>Customer Name: {{companyName}}</b></h4>
+                        <h4><b>Customer Mobile Number: {{hostPhone}}</b></h4>
+                        <h4><b>FASTag id: {{entityIdForCorp}}</b></h4>
+                        <h4><b>Statement: {{startDate | date:'mediumDate'}} - {{endDate | date:'mediumDate'}}</b></h4>
+                    </div> -->
+
+                    <div class="col-12">
+                        <div class="col-12">
+                           <h4><b>Customer Name: {{companyName}}</b></h4>
+                        </div>
+                       
+                    </div>
+                    
+                   
+                        <div style="font-size: 126%;width: 60%;">
+                            <b>Customer Mobile Number: {{hostPhone}}</b><br>
+                            <b *ngIf="FT">FASTag id: {{entityIdForCorp}}<br></b>
+                            <b *ngIf="LQFT">FASTag id: {{entityIdForCorpLQ}}<br></b>
+                            <b>Statement: {{startDate | date:'mediumDate'}} - {{endDate | date:'mediumDate'}}</b><br>
+                            
+                        </div>
+                     
+                        <table style="width: 40%;">                              
+
+                        <tbody style="border: 1px solid black;">
+                            <tr style="text-align: center;height: 51%;">
+                                <td style="width: 40%;border: 1px solid black;"><b>debit</b></td>
+                                <td style="width: 40%;border: 1px solid black;"><b>credit</b></td>
+                            </tr>
+                            <tr style="text-align: center;">
+                                <td style="width: 40%;border: 1px solid black;">
+                                    <b> {{debitSum}} </b>
+                                </td>
+                                <td style="width: 40%;border: 1px solid black;">
+                                    <b> {{creditSum}} </b>
+                                </td>
+
+                            </tr>
+                        </tbody>
+
+
+
+                        </table>
+                   
+
+
+                </div>
+                </div>
+
+                <div class="row p-1">
+                    <div class="col col-xl-12 col-lg-12">
+                        <div class="card-body table-responsive">
+                            <table class="table table-hover table-striped p-1" style="border: 2px solid #272829;font-size: smaller; ">
+                                <thead style="background-color: #fcba03;">
+                                    <tr>
+                                        <th style="text-align: center;border: 2px solid #272829; ">
+                                            Date
+                                        </th>
+                                        <th style="text-align: center;border: 2px solid #272829; ">
+                                            Vehicle Number
+                                        </th>
+                                        <th style="text-align: center;border: 2px solid #272829; ">
+                                            Transaction Ref
+                                        </th>
+                                        <th style="text-align: center;border: 2px solid #272829; ">
+                                            Transaction Type
+                                        </th>
+                                        <th style="text-align: center;border: 2px solid #272829; ">
+                                            Toll Plaza
+                                        </th>
+                                        <th style="text-align: center;border: 2px solid #272829; ">
+                                            Amount
+                                        </th>
+                                        <th style="text-align: center;border: 2px solid #272829; ">
+                                            Closing Bal
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody *ngIf = "viewStatus">
+                                    <tr *ngFor="let data of dataArray">
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                             <!-- {{data.transaction.time | date:'mediumDate'}} {{data.transaction.time | date:'HH:mm:ss'}} -->
+                                             {{data.transaction.time | date:'mediumDate'}} {{data.transaction.time  | date:'HH:mm:ss'}} 
+
+                                        </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                            {{data.transaction.businessId}} 
+                                       </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">                                               
+                                            {{data.transaction.txRef}} 
+                                        </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                            {{data.transaction.type}}
+                                        </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                            {{data.transaction.beneficiaryName}}
+                                        </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                            {{data.transaction.amount | number:'1.2-2'}}
+                                        </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                            {{data.transaction.balance | number:'1.2-2' }}
+                                        </td>
+                                    </tr>
+                                  
+                                </tbody>
+                                <tbody *ngIf = "!viewStatus">
+                                    <tr *ngFor="let data of dataArray">
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                             <!-- {{data.fastagTransactionTime | date:'mediumDate'}} {{data.fastagTransactionTime.time | date:'HH:mm:ss'}} -->
+                                             {{data.fastagTransactionTime | date:'mediumDate'}} {{data.fastagTransactionTime | date:'HH:mm:ss'}} 
+                                        </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                            {{data.fastagTransactionBusinessId}} 
+                                       </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">                                               
+                                            {{data.fastagtxRef}} 
+                                        </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                            {{data.fastagType}}
+                                        </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                            {{data.fastagBeneficiaryName}}
+                                        </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                            {{data.fastagTransactionAmount | number:'1.2-2'}}
+                                        </td>
+                                        <td style="text-align: center;border: 2px solid #272829;">
+                                            {{data.fastagTransactionBalance | number:'1.2-2' }}
+                                        </td>
+                                    </tr>
+                                  
+                                </tbody>
+                            </table>
+
+
+                        </div>
+                    </div>
+
+                </div>
+              
+
+              
+
+            </div>
+        </div>
+
+    </div>
 </div>
-<!--end::Mixed Widget 14-->
+</body>
+
+</html>
